--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="hero-content">
-            <div class="greeting">ðŸ‘‹ Hello, I'm</div>
+            <div class="greeting">‹ Hello, I'm</div>
             <h1 class="hero-title">Jatin Sharma</h1>
             <h2 class="hero-title gradient-text">Web Developer</h2>
             <p class="hero-description">
@@ -381,3 +381,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
