--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <i class="fas fa-bolt"></i>
                         MGVCL
                     </div>
-                    <div class="job-title">Project Intern“ Disaster Management System</div>
+                    <div class="job-title">Project Intern Disaster Management System</div>
                     <div class="job-duration">
                         <i class="far fa-calendar-alt"></i>
                         Jan 2025 - Apr 2025 Â· Madhya Gujarat
@@ -381,5 +381,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
